2013-03-16 Borut Razem <borut.razem AT siol.net>

	* snap_header.php: fetch ChangeLog from the new svn repository

2013-03-12 Borut Razem <borut.razem AT siol.net>

	* index.php, left_menu.inc: updated after project transition to Allura

2012-12-04 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc:
	  updated sdcc wiki url to http://sdcc.sourceforge.net/wiki/

2012-10-19 Borut Razem <borut.razem AT siol.net>

	* index.php: added Molnar Karoly to the "Who is SDCC?" list

2012-10-06 Borut Razem <borut.razem AT siol.net>

	* index.php: added Raspbian to the list of "known to compile" platforms

2012-08-15 Borut Razem <borut.razem AT siol.net>

	* snap.php: enable fourth part in configuration triplets

2012-07-09 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.2.0 release,
	  fixed bug #3537876 - types doc

2012-07-07 Borut Razem <borut.razem AT siol.net>

	* index.php, previous.php: added News - sdcc 3.2.0 RC4

2012-06-29 Borut Razem <borut.razem AT siol.net>

	* index.php, previous.php: added News - sdcc 3.2.0 RC3

2012-06-24 Borut Razem <borut.razem AT siol.net>

	* index.php, previous.php: added News - sdcc 3.2.0 RC2

2012-06-17 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.2.0 RC1

2012-06-01 Borut Razem <borut.razem AT siol.net>

	* index.php: updated / reorganised for sdcc 3.2.0

2012-05-18 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: link to Regression Tests re-included
	* regtests.php: fixed build number update, table sort & zebra style
	* images/asc.gif, images/bg.gif, images/desc.gif,
	  scripts/jquery.tablesorter.js, styles/tablesorter.css:
	  included tablesorter plugin

2012-05-15 Borut Razem <borut.razem AT siol.net>

	* sdcc_sw.ini: added for regtests db rw access
	* dbg.php: new, implemented Dbg debugging class
	* update_regtests_db.php: fixed, use Dbg class

2012-03-12 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: link to html version of sdccman removed;